# halo2-lib-eddsa

./: .gitignore  Cargo.toml  README.md  allowed_signers
src/: ecc.rs  eddsa.rs  fixed_base.rs  lib.rs  tests.rs
src/ed25519/: mod.rs  utils.rs
src/ed25519/tests/: eddsa.rs  eddsa_tests.rs  mod.rs
