[package]
name = "halo2-lib-eddsa"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11"
num-bigint = "0.4.3"
rand = "0.8"
rand_chacha = "0.3.1"
plotters = { version = "0.3.0", optional = true }
test-case = "3.1.0"

# server
ark-std = { version = "0.3.0", features = ["print-trace"] }
base64 = "0.21.2"
clap = { version = "4.3.3", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.4", optional = true }
rocket_contrib = { version = "0.4", optional = true, default-features = false, features = ["json"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
sha2 = "0.9"
ssh-key = { version = "0.5.1", features = ["ed25519"] }

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "feat/ed25519" }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "feat/ed25519" }
rocket_cors = "0.5.2"

[dev-dependencies]
num-traits = "0.2"

[[bin]]
name = "server"
path = "src/ed25519/bin/server.rs"
required-features = ["server"]

[features]
default = ["halo2-axiom"] # ["dev-graph"]
dev-graph = ["halo2-pse", "halo2-base/dev-graph", "plotters"]
server = ["dep:rocket", "dep:rocket_contrib"]
halo2-axiom = ["halo2-base/halo2-axiom", "halo2-ecc/halo2-axiom"]
halo2-pse = ["halo2-base/halo2-pse", "halo2-ecc/halo2-pse"]

[patch.crates-io]
halo2curves_axiom = { git = "https://github.com/axiom-crypto/halo2curves.git", branch = "feat/ed25519", package = "halo2curves-axiom" }

[profile.dev]
opt-level = 3
debug = 1 # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true
